fixed section food spacing

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -174,7 +174,7 @@ main {
 .btn a {
   text-decoration: none;
   color: #000000;
-  margin-left: 5px;
+  margin-left: 10px;
 }
 .btn:hover {
   cursor: pointer;
