--- a/assets/css/top.css
+++ b/assets/css/top.css
@@ -154,8 +154,9 @@
 }
 .section_food_title {
   font-size: 4rem;
+  font-weight: 400;
   letter-spacing: 0.2em;
-  line-height: 4.8rem;
+  line-height: 5.8rem;
 }
 .section_food_title_logo {
   position: relative;
@@ -173,8 +174,26 @@
   display: flex;
   column-gap: 100px;
   font-size: 1.4rem;
+  font-weight: 400;
   letter-spacing: 0.1em;
   line-height: 2.8rem;
+}
+.section_food_container .btn {
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: 0.2em;
+  line-height: 2.6rem;
+}
+.section_food_container .btn::before{
+  content: "";
+  display: inline-block;
+  width: 5px;
+  height: 8px;
+  background-image: url("/assets/img/common/arrow_on_btn.png");
+  background-size: contain;
+  vertical-align: middle;
+  position: relative;
+  top: 1px;
 }
 .section_food_description_paragraph {
   width: 50%;
